--- a/pyDMDW/prak3_share.ipynb
+++ b/pyDMDW/prak3_share.ipynb
@@ -20,6 +20,20 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "JNPEibDG5r14"
+      },
+      "source": [
+        "!pip install numpy\n",
+        "!pip install sklearn\n",
+        "!pip install pandas\n",
+        "!pip install matplotlib"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "2M5PalsuuO0z"
       },
       "source": [
