--- a/pyDMDW/prak4_share.ipynb
+++ b/pyDMDW/prak4_share.ipynb
@@ -28,7 +28,8 @@
         "!pip install seaborn\n",
         "!pip install sklearn\n",
         "!pip install six\n",
-        "!pip install pydot"
+        "!pip install graphviz\n",
+        "!pip install pydot\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -52,7 +53,8 @@
         "from sklearn.metrics import classification_report,confusion_matrix\n",
         "from sklearn.tree import DecisionTreeRegressor\n",
         "from sklearn import metrics\n",
-        "from sklearn.externals.six import StringIO  \n",
+        "#from sklearn.externals.six import StringIO  \n",
+        "from six import StringIO\n",
         "from sklearn.tree import export_graphviz\n",
         "\n",
         "from IPython.display import Image  \n",
